fix: horizontal scroll bar on build page

--- a/packages/amplication-client/src/VersionControl/BuildPage.scss
+++ b/packages/amplication-client/src/VersionControl/BuildPage.scss
@@ -38,4 +38,8 @@ $icon-size: 20px;
       font-size: $icon-size;
     }
   }
+
+  .amp-page-content__main {
+    overflow-x: hidden;
+  }
 }
